java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable10.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable10 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable10() {
        boolean b = false;
        
        
        String foo;if (b)
            foo = "bar";
    }
    
}
